test/spec_vectors/memory64/fail/module_19.wat
(module (memory i64 281474976710657))